--- a/data.ipynb
+++ b/data.ipynb
@@ -75,18 +75,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goals_conceded_by_team = {'Arsenal': 39,'Aston Villa': 46,'Brighton': 46,'Burnley': 55,'Chelsea': 36,\n",
-    "                          'Crystal Palace': 66,'Everton': 48,'Fulham': 55,'Leeds': 54,'Leicester': 50,\n",
-    "                          'Liverpool': 42,'Man City': 32,'Man Utd': 44,'Newcastle': 62,'Sheffield Utd': 63,\n",
-    "                          'Southampton': 68,'Spurs': 45,'West Brom': 76,'West Ham': 47,'Wolves': 52}\n",
+    "#in previous year\n",
+    "goals_conceded_by_team = {'Arsenal': 39,'Aston Villa': 46,'Brighton': 46,'Burnley': 55,\n",
+    "                          'Chelsea': 36,'Crystal Palace': 66,'Everton': 48,'Fulham': 55,\n",
+    "                          'Leeds': 54,'Leicester': 50,'Liverpool': 42,'Man City': 32,\n",
+    "                          'Man Utd': 44,'Newcastle': 62,'Sheffield Utd': 63,'Southampton': 68,\n",
+    "                          'Spurs': 45,'West Brom': 76,'West Ham': 47,'Wolves': 52}\n",
     "\n",
-    "goals_scored= {'Man City':83,'Man Utd':73,'Leicester':68,'Liverpool':68,'Spurs':68,'Leeds':62,'West Ham':62,\n",
-    "'Chelsea':58,'Arsenal':55,'Aston Villa':55,'Southampton':48,'Everton':47,'Newcastle':46,'Brighton':41,\n",
-    "'Crystal Palace':41,'Wolves':36,'West Brom':35,'Burnley':33,'Fulham':27,'Sheffield Utd':20}\n",
+    "goals_scored= {'Man City':83,'Man Utd':73,'Leicester':68,\n",
+    "               'Liverpool':68,'Spurs':68,'Leeds':62,'West Ham':62,\n",
+    "               'Chelsea':58,'Arsenal':55,'Aston Villa':55,'Southampton':48,\n",
+    "               'Everton':47,'Newcastle':46,'Brighton':41,'Crystal Palace':41,\n",
+    "               'Wolves':36,'West Brom':35,'Burnley':33,'Fulham':27,'Sheffield Utd':20}\n",
     "\n",
-    "team_wins = {'Man City': 27,'Man Utd': 21, 'Leicester': 20,'Liverpool': 20,'Chelsea': 19,'West Ham': 19,\n",
-    "'Arsenal': 18,'Leeds': 18,'Spurs': 18,'Everton': 17,'Aston Villa': 16,'Crystal Palace': 12,'Newcastle': 12,\n",
-    "'Southampton': 12,'Wolves': 12,'Burnley': 10,'Brighton': 9,'Sheffield Utd': 7,'Fulham': 5,'West Brom': 5}\n",
+    "team_wins = {'Man City': 27,'Man Utd': 21, 'Leicester': 20,'Liverpool': 20,\n",
+    "             'Chelsea': 19,'West Ham': 19,'Arsenal': 18,'Leeds': 18,'Spurs': 18,\n",
+    "             'Everton': 17,'Aston Villa': 16,'Crystal Palace': 12,'Newcastle': 12,\n",
+    "             'Southampton': 12,'Wolves': 12,'Burnley': 10,'Brighton': 9,\n",
+    "             'Sheffield Utd': 7,'Fulham': 5,'West Brom': 5}\n",
     "\n",
     "#we measure goals_conceded as an inverse indicator of defense strength\n",
     "data['opp_defense_rank'] = data['opponent_team'].map(goals_conceded_by_team)\n",
@@ -135,7 +141,9 @@
     "pos_ids = np.array([k for k in data['pos_id'].unique()])\n",
     "data['pos_id']=data['pos_id'].apply(lambda x : np.where(x == pos_ids)[0][0])\n",
     "\n",
-    "data['game_avg_7']= data.groupby(['name'])['total_points_20'].rolling(7).mean().reset_index(0,drop=True)\n",
+    "data['game_avg_7']= data.groupby(['name']\n",
+    "                                )['total_points_20'].rolling(7).mean().reset_index(0,drop=True)\n",
+    "\n",
     "data.sort_values(by =['game_avg_7'], inplace = True)\n",
     "data['rank']= pd.qcut(data['game_avg_7'],q = 4, labels = False)\n",
     "data['diff_from_avg'] = data['total_points'] - data['game_avg_7']\n",
