slides and notebook update

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,47 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bba452ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 3494k  100 3494k    0     0  2254k      0  0:00:01  0:00:01 --:--:-- 2254k\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 3494k  100 3494k    0     0  3653k      0 --:--:-- --:--:-- --:--:-- 3648k 0     0  3998k      0 --:--:-- --:--:-- --:--:-- 3998k\n"
-     ]
+   "execution_count": null,
+   "id": "45104163",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "!curl -o 2020.csv https://raw.githubusercontent.com/vaastav/Fantasy-Premier-League/master/data/2020-21/gws/merged_gw.csv\n",
     "data20 = pd.read_csv(\"2020.csv\")\n",
     "\n",
-    "!curl -o 2021.csv https://raw.githubusercontent.com/vaastav/Fantasy-Premier-League/master/data/2020-21/gws/merged_gw.csv\n",
     "data = pd.read_csv(\"2021.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1ea873ed",
-   "metadata": {},
+   "execution_count": null,
+   "id": "806091a1",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "players21 = set(data.name)\n",
     "players20 = set(data20.name)\n",
     "players20 = players20.intersection(players21)\n",
     "data20 = data20[data20['name'].isin(players20)]\n",
-    "data = data[data['name'].isin(players20)]\n",
-    "\n",
+    "data = data[data['name'].isin(players20)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4061a4dd",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "data20['total_points_20'] = data20['total_points']\n",
     "data20['GW_20'] = data20['GW']\n",
     "data20['name_20'] = data20['name']\n",
@@ -51,16 +56,19 @@
     "cols20 = ['name_20','GW_20']\n",
     "data20.set_index(cols20)\n",
     "data.set_index(cols)\n",
-    "\n",
     "data = data.join(data20)\n",
     "data = data[(data['name']==data['name_20']) & (data['GW']==data['GW_20'])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7d2edcce",
-   "metadata": {},
+   "execution_count": null,
+   "id": "49c3ec97",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "team_names = sorted(list(set(list((data.team)))))\n",
@@ -70,9 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "562699a9",
-   "metadata": {},
+   "execution_count": null,
+   "id": "b07f429a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "#in previous year\n",
@@ -92,8 +104,20 @@
     "             'Chelsea': 19,'West Ham': 19,'Arsenal': 18,'Leeds': 18,'Spurs': 18,\n",
     "             'Everton': 17,'Aston Villa': 16,'Crystal Palace': 12,'Newcastle': 12,\n",
     "             'Southampton': 12,'Wolves': 12,'Burnley': 10,'Brighton': 9,\n",
-    "             'Sheffield Utd': 7,'Fulham': 5,'West Brom': 5}\n",
-    "\n",
+    "             'Sheffield Utd': 7,'Fulham': 5,'West Brom': 5}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cbe0a42",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "#we measure goals_conceded as an inverse indicator of defense strength\n",
     "data['opp_defense_rank'] = data['opponent_team'].map(goals_conceded_by_team)\n",
     "data.sort_values(by =['opp_defense_rank'], inplace = True)\n",
@@ -112,14 +136,18 @@
     "\n",
     "data['opp_cluster_rank'] = data['opponent_team'].map(goals_scored)\n",
     "data.sort_values(by =['opp_cluster_rank'], inplace = True)\n",
-    "data['opp_cluster_rank']= pd.qcut(data['opp_cluster_rank'],q = 4, labels = False)\n"
+    "data['opp_cluster_rank']= pd.qcut(data['opp_cluster_rank'],q = 4, labels = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "92b2a60e",
-   "metadata": {},
+   "execution_count": null,
+   "id": "dd7503a0",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "data['opponent_team'] = data['opponent_team'].map(dict(zip(team_names, team_ids)))\n",
@@ -128,31 +156,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c7ce93c8",
-   "metadata": {},
+   "execution_count": null,
+   "id": "bfabc67e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "initval = data[data['GW']==1][[\"name\",\"value\"]]\n",
-    "data['initval'] = data['name'].map(dict(zip(initval.name, initval.value)))\n",
-    "\n",
+    "data['initval'] = data['name'].map(dict(zip(initval.name, initval.value)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83347943",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "data['pos_id'] = data['position']\n",
     "data = pd.get_dummies(data,columns=['position'])\n",
     "pos_ids = np.array([k for k in data['pos_id'].unique()])\n",
-    "data['pos_id']=data['pos_id'].apply(lambda x : np.where(x == pos_ids)[0][0])\n",
-    "\n",
+    "data['pos_id']=data['pos_id'].apply(lambda x : np.where(x == pos_ids)[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "063ba449",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "data['game_avg_7']= data.groupby(['name']\n",
     "                                )['total_points_20'].rolling(7).mean().reset_index(0,drop=True)\n",
     "\n",
     "data.sort_values(by =['game_avg_7'], inplace = True)\n",
     "data['rank']= pd.qcut(data['game_avg_7'],q = 4, labels = False)\n",
-    "data['diff_from_avg'] = data['total_points'] - data['game_avg_7']\n",
-    "\n",
+    "data['diff_from_avg'] = data['total_points'] - data['game_avg_7']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04b076f6",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "pts=data.groupby(['name']).sum()\n",
     "pts = pts[pts['total_points']>50]\n",
     "chosen_players = pts.index\n",
-    "data = data[data['name'].isin(chosen_players)]\n",
-    "\n",
+    "data = data[data['name'].isin(chosen_players)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09f45031",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "data['was_homee']=data['was_home']\n",
     "data = pd.get_dummies(data,columns=['was_home'])\n",
     "data['was_home']=data['was_homee']\n",
@@ -161,31 +241,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "08e2efb6",
-   "metadata": {},
+   "execution_count": null,
+   "id": "d1e29b96",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "data = data[['name', 'total_points','position_DEF','GW','team',\n",
     "             'opponent_team','position_FWD', 'position_GK', \n",
-    "             'position_MID', 'game_avg_7','initval', 'was_home_False',\n",
-    "             'was_home_True','pos_id','initval','rank','diff_from_avg',\n",
+    "             'position_MID', 'game_avg_7' ,'pos_id',\n",
+    "             'initval','rank','diff_from_avg',\n",
     "            'opp_defense_rank','opp_attack_rank','team_cluster_rank',\n",
-    "            'opp_cluster_rank','was_home']]\n",
+    "            'opp_cluster_rank','was_home','total_points_20']]\n",
     "data.sort_values(by=['GW'],inplace=True)\n",
     "data.to_csv('data.csv',index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87629373",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
